tp-5/k8s/pss-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-dev
  labels:
    pod-security.kubernetes.io/enforce: baseline

---
apiVersion: v1
kind: Namespace
metadata:
  name: app-staging
  labels:
    pod-security.kubernetes.io/enforce: baseline

---
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
  labels:
    pod-security.kubernetes.io/enforce: restricted
